remove near duplicate method for generating ids from storedProc, cleanup
As before the methods for DataFiles/Datasets differed in whether there's
a remote service check done which should always be included.

Also removed unused datasetIdentifier variable/setter.